test/errors/error10.base
Expecting a list of value declarations '{ val x:... }' but got '='
type x = int;
       ^ 
